force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/EZProtect4SF__EZProtectSetting__mdt.object-meta.xml
<CustomObject>
    <label>EZProtect Setting</label>
    <pluralLabel>EZProtectSettings</pluralLabel>
</CustomObject>