force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__AdminUserIdForFileLibrarySharing__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__AdminUserIdForFileLibrarySharing__c</fullName>
    <label>Admin UserId for File Sharing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>