force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__BlockDownloadofFilesUntilScanned__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__BlockDownloadofFilesUntilScanned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Download of Files Until Scanned</label>
    <type>Checkbox</type>
</CustomField>