force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__BlockDownloadofThreateningFiles__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__BlockDownloadofThreateningFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Download of Threatening Files</label>
    <type>Checkbox</type>
</CustomField>