force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__DisableUploadingOnFilesTab__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__DisableUploadingOnFilesTab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Uploading On Files Tab</label>
    <type>Checkbox</type>
</CustomField>