force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__EZProtectBaseURL__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__EZProtectBaseURL__c</fullName>
    <label>EZProtect Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>