force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__EZProtectEnabled__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__EZProtectEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EZProtect Enabled</label>
    <type>Checkbox</type>
</CustomField>