force-app/main/default/objects/EZProtect4SF__EZProtectSetting__mdt/fields/EZProtect4SF__GrantAdminAccessToFiles__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__GrantAdminAccessToFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant Admin Access To Files</label>
    <type>Checkbox</type>
</CustomField>